# Nexxi

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  nexxi_lite.py  probe_hf.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/middleware/: __init__.py  auth.py  logging_middleware.py  rate_limiter.py
app/routes/: __init__.py  chat.py  health.py
app/schemas/: __init__.py  chat_schema.py
app/services/: __init__.py  chat_service.py  conversation_manager.py  model_loader.py  safety_filter.py
app/static/: index.html
app/utils/: __init__.py  exceptions.py  logger.py  metrics.py
config/: config.yaml  dev.yaml  prod.yaml  staging.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  prometheus.yml
docs/: api_reference.md  architecture.md
frontend/: .env.example  Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatInput.tsx  ChatWindow.tsx  FileUpload.tsx  TypingIndicator.tsx  VoiceInput.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Tooltip.tsx
frontend/src/hooks/: useChat.ts  useFileUpload.ts  useSession.ts  useVoiceInput.ts
frontend/src/services/: api.ts  chatService.ts
frontend/src/store/: chatStore.ts  sessionStore.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: chat.types.ts
frontend/src/utils/: formatters.ts  validators.ts
scripts/: run_tests.sh  setup.sh
tests/: __init__.py
tests/integration/: __init__.py  test_chat_api.py  test_model_loader.py
tests/unit/: __init__.py  test_chat_service.py  test_conversation_manager.py  test_safety_filter.py
