[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexxi"
version = "1.0.0"
description = "Nexxi — Next-gen AI chatbot powered by Hugging Face"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nexxi Team", email = "team@nexxi.ai" }]
keywords = ["chatbot", "ai", "huggingface", "fastapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = []  # Managed via requirements.txt for pinned reproducibility

[project.urls]
Homepage = "https://github.com/your-org/nexxi"
Documentation = "https://nexxi.ai/docs"
Repository = "https://github.com/your-org/nexxi"
Issues = "https://github.com/your-org/nexxi/issues"

# ── Black (code formatter) ────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ── Ruff (fast linter, replaces flake8) ──────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in default arg (FastAPI DI pattern)
    "B904",  # Allow raise without from in except (common in service code)
]
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.isort]
known-first-party = ["app"]

# ── Mypy (static type checker) ────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = ["transformers.*", "langchain.*", "redis.*", "bitsandbytes.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Tests that take >5 seconds",
]

# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["app"]
omit = ["tests/*", "scripts/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
